# comfyui-agent

./: .env.example  .gitignore  README.md  bootstrap.sh  pyproject.toml  qa_test.py
.claude/: CLAUDE.md  TASK.md  gsd-file-manifest.json
.claude/agents/: code-agent.md  code-critic.md  gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md  qa-e2e-tester.md  studio-agent.md  ui-creator.md
.claude/plans/: lively-mixing-fox.md  synchronous-honking-sunbeam.md
.claude/skills/: studio-agent.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
configs/: isp_postprocess.yaml  parser.yaml  telegram.yaml  vast.yaml  wan_animate.yaml  x2v_animate.yaml
docs/: api.md  database.md  frontend.md  pipeline.md  telegram_bot.md  trend_parser.md  vast_agent.md  x2v_pipeline.md
frontend/: README.md  index.html  package.json  vite.config.ts
frontend-dist/: index.html
frontend-dist/assets/: index-2SG_AWQv.css  index-30DdLhCm.js  index-3RUiKADb.css  index-4crBLOgn.js  index-4tjmJgWI.js  index-A-s-Ct7x.js  index-B-M-ZtBE.js  index-B3FMivqg.css  index-B52OSIR9.css  index-B6-uGKhn.css  index-B7QFcEtJ.css  index-BAeU6hOa.js  index-BCA5Zqz1.js  index-BCC67Z3i.js  index-BEMv0D_u.css  index-BFmorTvY.js  index-BH002fhU.js  index-BKupnu9G.js  index-BLKDOdSX.js  index-BR93Rl_q.js  index-BRUSmAKU.css  index-BVzQ-YRy.js  index-BYgWTeSn.js  index-BaOR2Yus.js  index-Bc0PaIJ6.js  index-Bd8FhKL3.js  index-BdjWfsxS.js  index-BfnpcYtd.js  index-BgNFAJ9F.js  index-BmbYQhcr.js  index-Bn-X02P7.js  index-Bny3RgF5.js  index-BwnsrXU-.js  index-BxBeKAm3.js  index-BxlkdrOO.js  index-ByZoyUmD.js  index-C3IoPbCo.js  index-C4LepmrN.css  index-C56mp3KO.js  index-C7DScSyq.css  (+95 more)
src/agent/: cli.py
src/api/: app.py  auth.py  database.py  db_store.py  deps.py  events.py  job_manager.py  jobs.py  main.py  migrate.py  migrate_paths.py  path_utils.py  qa_review.py  ref_align.py  schema.sql  server.py
src/comfy_pipeline/: __main__.py  cli.py  client.py  (+4 more)
tests/: test_workflow_convert.py
workflows/: Wan_Animate_workflow.json  Wan_Animate_workflow_api.json
(+263 files in other folders)
